--- a/po/da/kfract.po
+++ b/po/da/kfract.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: KDE GRAPHICS/kfract\n"
 "POT-Creation-Date: 1998-11-16 01:58+0100\n"
-"PO-Revision-Date: 1999-01-26 15:28+0100\n"
+"PO-Revision-Date: 1999-02-16 15:28+0100\n"
 "Last-Translator: Erik Kjær Pedersen <erik@binghamton.edu>\n"
 "Language-Team: da <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -126,7 +126,7 @@ msgstr "Midten av bildet: Imaginær del"
 
 #: kfractdlgs.C:192
 msgid "Width of picture:"
-msgstr "Bredde av billedet:"
+msgstr "Bredde af billedet:"
 
 #: kfractdlgs.C:220 kfractdlgs.C:655 kfractdlgs.C:840
 msgid "Defaults"
@@ -182,7 +182,7 @@ msgstr "Formindskningsfaktor:"
 
 #: kfractdlgs.C:849
 msgid "Zoom factors"
-msgstr "Forstørringsfaktor"
+msgstr "Forstørringsfaktorer"
 
 #: fract.C:73
 msgid ""
