--- a/po/da/kpaint.po
+++ b/po/da/kpaint.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: KDE GRAPHICS/kpaint\n"
 "POT-Creation-Date: 1999-01-11 01:50+0100\n"
-"PO-Revision-Date: 1999-01-26 17:48-0100\n"
+"PO-Revision-Date: 1999-02-16 17:48-0100\n"
 "Last-Translator: Erik Kjær Pedersen <erik@binghamton.edu>\n"
 "Language-Team: da <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -201,7 +201,7 @@ msgstr "Ændre farvedybde..."
 
 #: kpaint.cpp:461
 msgid "Tool Properties..."
-msgstr "Verktøjsegenskaber..."
+msgstr "Værktøjsegenskaber..."
 
 #: kpaint.cpp:482
 msgid "Show Tools Toolbar"
@@ -303,7 +303,7 @@ msgstr "Områdevalg"
 
 #: manager.cpp:88
 msgid "Tool Properties"
-msgstr "Verktøjsegenskaper"
+msgstr "Værktøjsegenskaper"
 
 #: palette.cpp:100
 msgid "Edit Colour"
@@ -315,11 +315,11 @@ msgstr "Linieegenskaber"
 
 #: properties.cpp:23
 msgid "Fill Properties"
-msgstr "Fyld ind egenskaber"
+msgstr "Fyldind egenskaber"
 
 #: properties.cpp:70 properties.cpp:125
 msgid "Fill Pattern:"
-msgstr "Fyld ind mønster"
+msgstr "Fyldind mønster"
 
 #: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
 msgid "None"
