--- a/po/br/kfax.po
+++ b/po/br/kfax.po
@@ -1,5 +1,4 @@
 # KTranslator Generated File
-
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -15,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso8859-1\n"
 "Content-Transfer-Encoding: 8 bit\n"
-"X-Generator: KTranslator v 0.4.0"
+"X-Generator: KTranslator v 0.4.0\n"
 
 #: kfax.cpp:233 kfax.cpp:827
 msgid "Show &Tool Bar"
@@ -376,7 +375,6 @@ msgid ""
 msgstr ""
 "Ret eo deoc'h reiñ un urzhiad moulañ evel \"lpr\"\n"
 "m'ho peus c'hoant moulañ gant ur voulerez."
-""
 
 #: options.cpp:54
 msgid "KFax Options Dialog"
