--- a/po/br/kghostview.po
+++ b/po/br/kghostview.po
@@ -1,5 +1,4 @@
 # KTranslator Generated File
-
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -15,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso8859-1\n"
 "Content-Transfer-Encoding: 8 bit\n"
-"X-Generator: KTranslator v 0.4.0"
+"X-Generator: KTranslator v 0.4.0\n"
 
 #: marklist.cpp:38
 msgid "Mark current page"
@@ -283,8 +282,7 @@ msgstr "Arveriadur : "
 msgid ""
 " [filename] [siwtches]\n"
 "\n"
-msgstr ""
-" [anv restr] [dibarzhoù]\n"
+msgstr " [anv restr] [dibarzhoù]\n"
 
 #: main.cpp:28
 msgid ""
