--- a/po/es/kghostview.po
+++ b/po/es/kghostview.po
@@ -4,38 +4,47 @@ msgstr ""
 "PO-Revision-Date: 1999-02-18 13:45+0200\n"
 "Last-Translator: José Ruiz-Poveda Hurtado <ruizpoveda@yahoo.com>\n"
 
+# marklist.cpp:38
 #: marklist.cpp:38
 msgid "Mark current page"
 msgstr "Marcar página actual"
 
+# marklist.cpp:39
 #: marklist.cpp:39
 msgid "Mark all pages"
 msgstr "Marcar todas las páginas"
 
+# marklist.cpp:40
 #: marklist.cpp:40
 msgid "Mark even pages"
 msgstr "Marcar páginas pares"
 
+# marklist.cpp:41
 #: marklist.cpp:41
 msgid "Mark odd pages"
 msgstr "Marcar páginas impares"
 
+# marklist.cpp:42
 #: marklist.cpp:42
 msgid "Toggle page marks"
 msgstr "Cambiar marcas de páginas"
 
+# marklist.cpp:43
 #: marklist.cpp:43
 msgid "Remove page marks"
 msgstr "Suprimir marcas de páginas"
 
+# marklist.cpp:367
 #: marklist.cpp:367
 msgid "Page"
 msgstr "Página"
 
+# copyright.cpp:27
 #: copyright.cpp:27
 msgid "Copyright"
 msgstr "Copyright"
 
+# copyright.cpp:41 kghostview.cpp:618
 #: copyright.cpp:41 kghostview.cpp:618
 msgid ""
 "\n"
@@ -69,138 +78,172 @@ msgstr ""
 "junto con este programa; si no es así, escriba a la Free Software \n"
 "Foundation , Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
 
+# interpreter.cpp:42
 #: interpreter.cpp:42
 msgid "General"
 msgstr "General"
 
+# interpreter.cpp:79
 #: interpreter.cpp:79
 msgid "&Interpreter name"
 msgstr "Nombre del &intérprete"
 
+# interpreter.cpp:87
 #: interpreter.cpp:87
 msgid "&Antialiasing"
 msgstr "&Antialiasing"
 
+# interpreter.cpp:97
 #: interpreter.cpp:97
 msgid "Platform &fonts"
 msgstr "&Fuentes de plataforma"
 
+# interpreter.cpp:107
 #: interpreter.cpp:107
 msgid "&Messages"
 msgstr "&Mensajes"
 
+# interpreter.cpp:130
 #: interpreter.cpp:130
 msgid "Palette"
 msgstr "Paleta"
 
+# interpreter.cpp:152
 #: interpreter.cpp:152
 msgid "Colo&r"
 msgstr "Colo&r"
 
+# interpreter.cpp:161
 #: interpreter.cpp:161
 msgid "&Grayscale"
 msgstr "Escala de &grises"
 
+# interpreter.cpp:169
 #: interpreter.cpp:169
 msgid "Monochrom&e"
 msgstr "Mono&cromo"
 
+# interpreter.cpp:192
 #: interpreter.cpp:192
 msgid "Backing"
 msgstr "Soporte"
 
+# interpreter.cpp:214
 #: interpreter.cpp:214
 msgid "&Pixmap"
 msgstr "Pixmap"
 
+# interpreter.cpp:224
 #: interpreter.cpp:224
 msgid "&Backing store"
 msgstr "A&lmacén de respaldo"
 
+# interpreter.cpp:314
 #: interpreter.cpp:314
 msgid "gs"
 msgstr "gs"
 
+# messages.cpp:29
 #: messages.cpp:29
 msgid "Ghostscript messages"
 msgstr "Mensajes de Ghostscript"
 
+# messages.cpp:56
 #: messages.cpp:56
 msgid "&Clear"
 msgstr "L&impiar"
 
+# messages.cpp:59
 #: messages.cpp:59
 msgid "&Dismiss"
 msgstr "&Deshacer"
 
+# info.cpp:45
 #: info.cpp:45
 msgid "File name :"
 msgstr "Nombre archivo:"
 
+# info.cpp:53
 #: info.cpp:53
 msgid "Document title :"
 msgstr "Título documento:"
 
+# info.cpp:61
 #: info.cpp:61
 msgid "Publication date :"
 msgstr "Fecha publicación:"
 
+# print.cpp:35
 #: print.cpp:35
 msgid "Printer setup"
 msgstr "Configuración de impresora"
 
+# print.cpp:61
 #: print.cpp:61
 msgid "&Printer name"
 msgstr "Nombre de im&presora"
 
+# print.cpp:73
 #: print.cpp:73
 msgid "&Spooler command"
 msgstr "Comando &Spooler"
 
+# print.cpp:85
 #: print.cpp:85
 msgid "&Environment variable"
 msgstr "Variable de &Entorno"
 
+# print.cpp:145
 #: print.cpp:145
 msgid "Print to file"
 msgstr "Imprimir a archivo"
 
+# print.cpp:150
 #: print.cpp:150
 msgid "Pages"
 msgstr "Páginas"
 
+# print.cpp:176
 #: print.cpp:176
 msgid "&All"
 msgstr "&Todo"
 
+# print.cpp:185
 #: print.cpp:185
 msgid "&Current"
 msgstr "A&ctual"
 
+# print.cpp:193
 #: print.cpp:193
 msgid "&Marked"
 msgstr "&Marcados"
 
+# print.cpp:202
 #: print.cpp:202
 msgid "&Range"
 msgstr "&Rango"
 
+# print.cpp:216
 #: print.cpp:216
 msgid "to"
 msgstr "a"
 
+# print.cpp:229
 #: print.cpp:229
 msgid "Print document in re&verse order"
 msgstr "Imprimir documento en orden in&verso"
 
+# print.cpp:246
 #: print.cpp:246
 msgid "&Setup ..."
 msgstr "&Configuracion ..."
 
+# print.cpp:304
 #: print.cpp:304
 msgid "Range error"
 msgstr "Error de rango"
 
+# print.cpp:305
 #: print.cpp:305
 msgid ""
 "The range of pages entered for printing\n"
@@ -217,56 +260,70 @@ msgstr ""
 "de página para esta parte del documento. Verifique\n"
 "la barra de estado para esta información.\n"
 
+# goto.cpp:54
 #: goto.cpp:54
 msgid "&Section"
 msgstr "&Sección"
 
+# goto.cpp:70
 #: goto.cpp:70
 msgid "&Page"
 msgstr "&Página"
 
+# goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2236
+# kghostview.cpp:2248 kghostview.cpp:2253 kghostview.cpp:2536
 #: goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2236
 #: kghostview.cpp:2248 kghostview.cpp:2253 kghostview.cpp:2536
 #, c-format
 msgid "of %d"
 msgstr "de %d"
 
+# kghostview.cpp:1224 kghostview.cpp:2327 viewcontrol.cpp:64
 #: kghostview.cpp:1224 kghostview.cpp:2327 viewcontrol.cpp:64
 msgid "Portrait"
 msgstr "Vertical"
 
+# kghostview.cpp:1226 kghostview.cpp:2333 viewcontrol.cpp:65
 #: kghostview.cpp:1226 kghostview.cpp:2333 viewcontrol.cpp:65
 msgid "Landscape"
 msgstr "Horizontal"
 
+# kghostview.cpp:1228 kghostview.cpp:2331 viewcontrol.cpp:66
 #: kghostview.cpp:1228 kghostview.cpp:2331 viewcontrol.cpp:66
 msgid "Seascape"
 msgstr "Horizontal"
 
+# kghostview.cpp:1230 kghostview.cpp:2329 viewcontrol.cpp:67
 #: kghostview.cpp:1230 kghostview.cpp:2329 viewcontrol.cpp:67
 msgid "Upside down"
 msgstr "Boca abajo"
 
+# viewcontrol.cpp:75
 #: viewcontrol.cpp:75
 msgid "magnification"
 msgstr "magnificación"
 
+# viewcontrol.cpp:85
 #: viewcontrol.cpp:85
 msgid "&Media"
 msgstr "&Media"
 
+# viewcontrol.cpp:93
 #: viewcontrol.cpp:93
 msgid "&Orientation"
 msgstr "&Orientación"
 
+# viewcontrol.cpp:117
 #: viewcontrol.cpp:117
 msgid "&Apply"
 msgstr "&Aplicar"
 
+# main.cpp:25
 #: main.cpp:25
 msgid "Usage: "
 msgstr "Uso: "
 
+# main.cpp:27
 #: main.cpp:27
 msgid ""
 " [filename] [siwtches]\n"
@@ -275,6 +332,7 @@ msgstr ""
 " [archivo] [opciones]\n"
 "\n"
 
+# main.cpp:28
 #: main.cpp:28
 msgid ""
 "See KDE and Qt documentation for\n"
@@ -283,202 +341,252 @@ msgstr ""
 "Ver la documentación de KDE y Qt para\n"
 "opciones de la línea de comandos.\n"
 
+# main.cpp:30
 #: main.cpp:30
 msgid "Error on command line"
 msgstr "Error en la línea de comandos"
 
+# kghostview.cpp:206
 #: kghostview.cpp:206
 msgid "Document information"
 msgstr "Información documento"
 
+# kghostview.cpp:220
 #: kghostview.cpp:220
 msgid "Page Setup"
 msgstr "Configuración Página"
 
+# kghostview.cpp:360 kghostview.cpp:449
 #: kghostview.cpp:360 kghostview.cpp:449
 msgid "View Control"
 msgstr "Control de vista"
 
+# kghostview.cpp:361 kghostview.cpp:454
 #: kghostview.cpp:361 kghostview.cpp:454
 msgid "Go To Page"
 msgstr "Ir a la página"
 
+# kghostview.cpp:362 kghostview.cpp:447
 #: kghostview.cpp:362 kghostview.cpp:447
 msgid "Zoom In"
 msgstr "Acercar"
 
+# kghostview.cpp:363 kghostview.cpp:448
 #: kghostview.cpp:363 kghostview.cpp:448
 msgid "Zoom Out"
 msgstr "Alejar"
 
+# kghostview.cpp:364 kghostview.cpp:452
 #: kghostview.cpp:364 kghostview.cpp:452
 msgid "Next Page"
 msgstr "Siguiente página"
 
+# kghostview.cpp:365 kghostview.cpp:453
 #: kghostview.cpp:365 kghostview.cpp:453
 msgid "Prev Page"
 msgstr "Página anterior"
 
+# kghostview.cpp:366
 #: kghostview.cpp:366
 msgid "Scroll Up"
 msgstr "Desplazar hacia arriba"
 
+# kghostview.cpp:367
 #: kghostview.cpp:367
 msgid "Scroll Down"
 msgstr "Desplazar hacia abajo"
 
+# kghostview.cpp:368
 #: kghostview.cpp:368
 msgid "Scroll Left"
 msgstr "Deplazar a la izquierda"
 
+# kghostview.cpp:369
 #: kghostview.cpp:369
 msgid "Scroll Right"
 msgstr "Desplazar a la derecha"
 
+# kghostview.cpp:370 kghostview.cpp:450
 #: kghostview.cpp:370 kghostview.cpp:450
 msgid "Redisplay"
 msgstr "Actualizar"
 
+# kghostview.cpp:413 kghostview.cpp:415
 #: kghostview.cpp:413 kghostview.cpp:415
 msgid "Not known"
 msgstr "Desconocido"
 
+# kghostview.cpp:426
 #: kghostview.cpp:426
 msgid "Configure interpreter"
 msgstr "Configurar intérprete"
 
+# kghostview.cpp:444
 #: kghostview.cpp:444
 msgid "New"
 msgstr "Nuevo"
 
+# kghostview.cpp:498
 #: kghostview.cpp:498
 msgid "&New"
 msgstr "&Nuevo"
 
+# kghostview.cpp:500
 #: kghostview.cpp:500
 msgid "&Open ..."
 msgstr "&Abrir ..."
 
+# kghostview.cpp:501
 #: kghostview.cpp:501
 msgid "Open &recent"
 msgstr "Abrir &recientes"
 
+# kghostview.cpp:509
 #: kghostview.cpp:509
 msgid "Page Set&up ..."
 msgstr "Config&uración Página ..."
 
+# kghostview.cpp:511
 #: kghostview.cpp:511
 msgid "&Print ..."
 msgstr "Im&primir ..."
 
+# kghostview.cpp:519
 #: kghostview.cpp:519
 msgid "Zoom &in"
 msgstr "A&cercar"
 
+# kghostview.cpp:521
 #: kghostview.cpp:521
 msgid "Zoom &out"
 msgstr "A&lejar"
 
+# kghostview.cpp:523
 #: kghostview.cpp:523
 msgid "&Zoom ..."
 msgstr "&Zoom ..."
 
+# kghostview.cpp:528
 #: kghostview.cpp:528
 msgid "&Info ..."
 msgstr "&Información ..."
 
+# kghostview.cpp:533
 #: kghostview.cpp:533
 msgid "&Previous Page"
 msgstr "Página a&nterior"
 
+# kghostview.cpp:535
 #: kghostview.cpp:535
 msgid "&Next page"
 msgstr "Página &siguiente"
 
+# kghostview.cpp:537
 #: kghostview.cpp:537
 msgid "&Go to page ..."
 msgstr "&Ir a la página"
 
+# kghostview.cpp:540
 #: kghostview.cpp:540
 msgid "Go to &start"
 msgstr "Ir al &principio"
 
+# kghostview.cpp:542
 #: kghostview.cpp:542
 msgid "Go to &end"
 msgstr "Ir al &final"
 
+# kghostview.cpp:544
 #: kghostview.cpp:544
 msgid "&Read down"
 msgstr "&Leer abajo"
 
+# kghostview.cpp:549
 #: kghostview.cpp:549
 msgid "Mark &current page"
 msgstr "Marcar página a&ctual"
 
+# kghostview.cpp:552
 #: kghostview.cpp:552
 msgid "Mark &all pages"
 msgstr "Marcar tod&as las páginas"
 
+# kghostview.cpp:554
 #: kghostview.cpp:554
 msgid "Mark &even pages"
 msgstr "Marcar páginas par&es"
 
+# kghostview.cpp:556
 #: kghostview.cpp:556
 msgid "Mark &odd pages"
 msgstr "Marcar páginas &impares"
 
+# kghostview.cpp:559
 #: kghostview.cpp:559
 msgid "&Toggle page marks"
 msgstr "&Cambiar marcas de páginas"
 
+# kghostview.cpp:562
 #: kghostview.cpp:562
 msgid "&Remove page marks"
 msgstr "Suprimi&r marcas de páginas"
 
+# kghostview.cpp:573
 #: kghostview.cpp:573
 msgid "Show &tool bar"
 msgstr "Mostrar &barra de herramientas"
 
+# kghostview.cpp:574
 #: kghostview.cpp:574
 msgid "Show st&atus bar"
 msgstr "Mostrar barra de est&ado"
 
+# kghostview.cpp:575
 #: kghostview.cpp:575
 msgid "Show &page list"
 msgstr "Mostrar listado de &página"
 
+# kghostview.cpp:577
 #: kghostview.cpp:577
 msgid "Configure &interpreter ..."
 msgstr "Configurar &intérprete ..."
 
+# kghostview.cpp:578
 #: kghostview.cpp:578
 msgid "Configure &key bindings ..."
 msgstr "Confogurar &atajos del teclado"
 
+# kghostview.cpp:580
 #: kghostview.cpp:580
 msgid "&Save options"
 msgstr "Guardar opcione&s"
 
+# kghostview.cpp:587
 #: kghostview.cpp:587
 msgid "&About this application"
 msgstr "&Acerca de esta aplicación"
 
+# kghostview.cpp:589
 #: kghostview.cpp:589
 msgid "&Help for this application"
 msgstr "A&yuda de esta aplicación"
 
+# kghostview.cpp:591
 #: kghostview.cpp:591
 msgid "&Copyright"
 msgstr "&Copyright"
 
+# kghostview.cpp:598
 #: kghostview.cpp:598
 msgid "&Go"
 msgstr "&Ir"
 
+# kghostview.cpp:599
 #: kghostview.cpp:599
 msgid "&Pagemarks"
 msgstr "Marcas &Páginas"
 
+# kghostview.cpp:608
 #: kghostview.cpp:608
 msgid ""
 " - the PostScript document viewer for\n"
@@ -503,71 +611,88 @@ msgstr ""
 "\n"
 "Ver http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
 
+# kghostview.cpp:665
 #: kghostview.cpp:665
 msgid "New window ..."
 msgstr "Nueva ventana ..."
 
+# kghostview.cpp:668
 #: kghostview.cpp:668
 msgid "Open file ..."
 msgstr "Abrir archivo ..."
 
+# kghostview.cpp:676
 #: kghostview.cpp:676
 msgid "Print document ..."
 msgstr "Imprimir documento ..."
 
+# kghostview.cpp:681
 #: kghostview.cpp:681
 msgid "Zoom in"
 msgstr "Acercar"
 
+# kghostview.cpp:684
 #: kghostview.cpp:684
 msgid "Zoom out"
 msgstr "Alejar"
 
+# kghostview.cpp:689
 #: kghostview.cpp:689
 msgid "Go back"
 msgstr "Hacia atrás"
 
+# kghostview.cpp:692
 #: kghostview.cpp:692
 msgid "Go forward"
 msgstr "Hacia adelante"
 
+# kghostview.cpp:695
 #: kghostview.cpp:695
 msgid "Go to page ..."
 msgstr "Ir a la página"
 
+# kghostview.cpp:700
 #: kghostview.cpp:700
 msgid "Go to start"
 msgstr "Ir al principio"
 
+# kghostview.cpp:703
 #: kghostview.cpp:703
 msgid "Go to end"
 msgstr "Ir al final"
 
+# kghostview.cpp:706
 #: kghostview.cpp:706
 msgid "Read down the page"
 msgstr "Leer hacia abajo la página"
 
+# kghostview.cpp:711
 #: kghostview.cpp:711
 msgid "Toggle this page mark"
 msgstr "Cambiar esta marca de página"
 
+# kghostview.cpp:733
 #: kghostview.cpp:733
 msgid "Sc.100 of 100  P.100 of 100"
 msgstr "Sc.100 of 100  P.100 of 100"
 
+# kghostview.cpp:734
 #: kghostview.cpp:734
 #, c-format
 msgid "100 %"
 msgstr "100 %"
 
+# kghostview.cpp:735
 #: kghostview.cpp:735
 msgid "Upside Down"
 msgstr "Boca abajo"
 
+# kghostview.cpp:760
 #: kghostview.cpp:760
 msgid "Malformed URL."
 msgstr "URL incorrecta"
 
+# kghostview.cpp:772
 #: kghostview.cpp:772
 msgid ""
 "Already waiting\n"
@@ -580,26 +705,32 @@ msgstr ""
 "Por favor, espere hasta que haya terminado.\n"
 "Alternativamente, finalice el que está en marcha."
 
+# kghostview.cpp:781
 #: kghostview.cpp:781
 msgid "Could not start or find KFM."
 msgstr "No puedo iniciar o encontrar KFM."
 
+# kghostview.cpp:1269
 #: kghostview.cpp:1269
 msgid "Go to ..."
 msgstr "Ir a la página ..."
 
+# kghostview.cpp:1515
 #: kghostview.cpp:1515
 msgid "Version 0.6"
 msgstr "Versión 0.6"
 
+# kghostview.cpp:1516
 #: kghostview.cpp:1516
 msgid "Sorry, not ready yet"
 msgstr "Disculpe, aún ocupado"
 
+# kghostview.cpp:1523
 #: kghostview.cpp:1523
 msgid "About kghostview"
 msgstr "Acerca de kghostview"
 
+# kghostview.cpp:1524
 #: kghostview.cpp:1524
 msgid ""
 "Version :\t0.6 alpha\n"
@@ -610,10 +741,12 @@ msgstr ""
 "Autor : Mark Donohoe\n"
 "Correo : donohoe@kde.org"
 
+# kghostview.cpp:1576 kghostview.cpp:1696
 #: kghostview.cpp:1576 kghostview.cpp:1696
 msgid "Error printing"
 msgstr "Error de impresión"
 
+# kghostview.cpp:1586
 #: kghostview.cpp:1586
 msgid ""
 "You chose to print all pages to a file.\n"
@@ -626,6 +759,7 @@ msgstr ""
 "actualmente a cargado en el visor.\n"
 "No necesita imprimir todas las páginas en un nuevo archivo."
 
+# kghostview.cpp:1599
 #: kghostview.cpp:1599
 msgid ""
 "No file name was given so\n"
@@ -634,6 +768,7 @@ msgstr ""
 "No se dió un nombre de archivo, así\n"
 "que no se imprimió nada a un archivo.\n"
 
+# kghostview.cpp:1640
 #: kghostview.cpp:1640
 msgid ""
 "Set Environment variable (to PRINTER or LPDEST for instance)for Printer name "
@@ -642,11 +777,13 @@ msgstr ""
 "Configure la variable de entorno (a PRINTER o LPDEST por ejemplo) para que "
 "el nombre de la Impresora sea tomada en la cuenta."
 
+# kghostview.cpp:1661
 #: kghostview.cpp:1661
 #, c-format
 msgid "Print failure : %s"
 msgstr "Fallo de impresión : %s"
 
+# kghostview.cpp:1697
 #: kghostview.cpp:1697
 msgid ""
 "Printing failed because the list of\n"
@@ -655,40 +792,50 @@ msgstr ""
 "Falló la impresión porque la lista de\n"
 "páginas para imprimir estaba vacía.\n"
 
+# kghostview.cpp:2230 kghostview.cpp:2242 kghostview.cpp:2507
+# kghostview.cpp:2530
 #: kghostview.cpp:2230 kghostview.cpp:2242 kghostview.cpp:2507
 #: kghostview.cpp:2530
 msgid "of 1    "
 msgstr "de 1    "
 
+# kghostview.cpp:2232 kghostview.cpp:2244 kghostview.cpp:2532
 #: kghostview.cpp:2232 kghostview.cpp:2244 kghostview.cpp:2532
 #, c-format
 msgid "of %d    "
 msgstr "de %d    "
 
+# kghostview.cpp:2234 kghostview.cpp:2246 kghostview.cpp:2534
+# kghostview.cpp:2541
 #: kghostview.cpp:2234 kghostview.cpp:2246 kghostview.cpp:2534
 #: kghostview.cpp:2541
 #, c-format
 msgid "of %d  "
 msgstr "de %d  "
 
+# kghostview.cpp:2506
 #: kghostview.cpp:2506
 msgid "Sc.1 "
 msgstr "Sc.1"
 
+# kghostview.cpp:2509
 #: kghostview.cpp:2509
 msgid "P.1 "
 msgstr "P.1"
 
+# kghostview.cpp:2511 kghostview.cpp:2524
 #: kghostview.cpp:2511 kghostview.cpp:2524
 #, c-format
 msgid "P.%d "
 msgstr "P.%d"
 
+# kghostview.cpp:2526
 #: kghostview.cpp:2526
 #, c-format
 msgid "Sc.%d "
 msgstr "Sc.%d"
 
+# zoom.cpp:46
 #: zoom.cpp:46
 msgid "&Magnification"
 msgstr "&Magnificación"
