--- a/po/fr/kfract.po
+++ b/po/fr/kfract.po
@@ -7,8 +7,9 @@ msgstr ""
 "Project-Id-Version: kfract\n"
 "POT-Creation-Date: 1998-11-16 01:58+0100\n"
 "PO-Revision-Date: 1999-01-29 22:00+0100\n"
-"Last-Translator: Francois-Xavier Duranceau "
+"Last-Translator: Francois-Xavier Duranceau & Alain Gibaud"
 "<Francois-Xavier.Duranceau@loria.fr>\n"
+"<Alain.Gibaud@univ-valenciennes.fr>\n"
 "Language-Team: Français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -44,7 +45,7 @@ msgstr "Modèle de couleurs..."
 
 #: kfract.C:88
 msgid "Colour cycling..."
-msgstr ""
+msgstr "Permutation cyclique des couleurs..."
 
 #: kfract.C:89
 msgid "Zoom factor..."
@@ -112,25 +113,28 @@ msgstr "0 - 999"
 msgid "1000 - 100000"
 msgstr "1000 - 100000"
 
+# ++Gib: To bail out == sauter en parachute
 #: kfractdlgs.C:144
 msgid "Bailout"
-msgstr ""
+msgstr "Ejection"
 
+# Les 3 messages qui suivent ont ete raccourcis pour entrer dans la boite
 #: kfractdlgs.C:161
 msgid "Center of picture: Real part"
-msgstr "Centre de l'image : Partie réelle"
+msgstr "Centre image : Partie réelle"
 
 #: kfractdlgs.C:176
 msgid "Center of picture: Imaginary part"
-msgstr "Centre de l'image : Partie imaginaire"
+msgstr "Centre image : Partie imaginaire"
 
 #: kfractdlgs.C:192
 msgid "Width of picture:"
-msgstr "Largeur de l'image :"
+msgstr "Largeur image :"
 
+# ++Gib: Traduction Raccourcie pour ne pas sortir du bouton
 #: kfractdlgs.C:220 kfractdlgs.C:655 kfractdlgs.C:840
 msgid "Defaults"
-msgstr "Par défaut"
+msgstr "Défauts"
 
 #: kfractdlgs.C:408
 msgid "z(0) = c = pixel"
@@ -146,11 +150,11 @@ msgstr "Mandelbrot"
 
 #: kfractdlgs.C:476
 msgid "Extra parameter: Real part"
-msgstr "Paramètre supplémentaire : Partie réelle"
+msgstr "Param. suppl. : Partie réelle"
 
 #: kfractdlgs.C:492
 msgid "Extra parameter: Imaginary part"
-msgstr "Paramètre supplémentaire : Partie imaginaire"
+msgstr "Param. suppl. : Partie imaginaire"
 
 #: kfractdlgs.C:505
 msgid "Julia"
@@ -172,13 +176,16 @@ msgstr "Plus de couleurs"
 msgid "Colour schemes"
 msgstr "Modèles de couleurs"
 
+# ++Gib: Raccourci volontairement (pb de boite de dialogue)
+# le titre de la boite (Facteurs de zoom) suffit largement
 #: kfractdlgs.C:806
 msgid "Zoom in factor:"
-msgstr "Facteur de zoom avant :"
+msgstr "Zoom avant :"
 
+# ++Gib: Raccourci volontairement (pb de boite de dialogue)
 #: kfractdlgs.C:822
 msgid "Zoom out factor:"
-msgstr "Facteur de zoom arrière :"
+msgstr "Zoom arrière :"
 
 #: kfractdlgs.C:849
 msgid "Zoom factors"
