--- a/po/fr/kfax.po
+++ b/po/fr/kfax.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: kfax\n"
 "POT-Creation-Date: 1999-01-25 01:42+0100\n"
 "PO-Revision-Date: 1999-03-12 16:30+0200\n"
-"Last-Translator: Francois-Xavier DURANCEAU & Alain Gibaud"
-"<Francois-Xavier.Duranceau@loria.fr>\n"
-"<Alain.Gibaud@univ-valenciennes.fr>\n"
+"Last-Translator: Francois-Xavier DURANCEAU & Alain "
+"Gibaud<Francois-Xavier.Duranceau@loria.fr>\n"
 "Language-Team: Français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
+"<Alain.Gibaud@univ-valenciennes.fr>\n"
 
 #: kfax.cpp:233 kfax.cpp:827
 msgid "Show &Tool Bar"
