--- a/po/fr/kfract.po
+++ b/po/fr/kfract.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: kfract\n"
 "POT-Creation-Date: 1998-11-16 01:58+0100\n"
 "PO-Revision-Date: 1999-01-29 22:00+0100\n"
-"Last-Translator: Francois-Xavier Duranceau & Alain Gibaud"
-"<Francois-Xavier.Duranceau@loria.fr>\n"
-"<Alain.Gibaud@univ-valenciennes.fr>\n"
+"Last-Translator: Francois-Xavier Duranceau & Alain "
+"Gibaud<Francois-Xavier.Duranceau@loria.fr>\n"
 "Language-Team: Français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
+"<Alain.Gibaud@univ-valenciennes.fr>\n"
 
 #: kfract.C:73
 msgid "&Load params..."
